--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GEMINI_API_KEY=AIzaSyCxyValqZoY0P6oaPj0OLrhdrB4Vgjf2Cc
-WEATHER_API_KEY=2a9aa0b79bd0a109a982c6956f79d43f
-NEWS_API_KEY=e98bfcdfcbff462ca57cc0f9bb903b65
-PORCUPINE_ACCESS_KEY=W8IaDHfMD29XCaBNSE3ercXakxmO9rfCq9dKLfaZnDd/WvbgMocuoA==
+GEMINI_API_KEY="YOUR API KEY"
+WEATHER_API_KEY="YOUR API KEY"
+NEWS_API_KEY="YOUR API KEY"
+PORCUPINE_ACCESS_KEY="YOUR  KEY"
